ajustes no portifolio

--- a/src/components/Experiencia/Experiencia.css
+++ b/src/components/Experiencia/Experiencia.css
@@ -42,11 +42,12 @@
 .empresa-ano {
     position: absolute;
     top: 22px;
-    left: -100px;
+    left: -120px;
     color: #525252;
     font-size: 0.875rem;
     width: 80px;
-    text-align: right
+    text-align: right;
+    white-space: nowrap
 }
 
 .empresa-titulo {
