--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,14 @@
     justify-content: center;
 }
 
+.logo {
+    font-family: 'Arial', sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: black;
+  }
+
 .header-menu a {
     font-size: 1.125rem;
     line-height: 1.3;
