--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+/* src/components/Header/Header.css */
+
 .header {
     max-width: 1200px;
     margin: 0 auto;
@@ -5,13 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.header-menu {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
+    position: relative;
 }
 
 .logo {
@@ -20,24 +16,88 @@
     font-weight: bold;
     text-transform: uppercase;
     color: black;
-  }
-
-.header-menu a {
-    font-size: 1.125rem;
-    line-height: 1.3;
-    padding: 10px 20px;
-    display: block;
-    color: #000;
 }
 
-@media (max-width: 800px){
-    header {
-        flex-direction: column;
-        gap: 40px;
+.desktop-menu ul {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+    padding: 0;
+}
+
+.desktop-menu a {
+    text-decoration: none;
+    font-size: 1.125rem;
+    color: black;
+}
+
+.menu-burger {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 1000;
+}
+
+.menu-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+}
+
+.mobile-menu ul {
+    list-style: none;
+    padding: 0;
+}
+
+.mobile-menu li {
+    margin: 20px 0;
+}
+
+.mobile-menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
+@media (max-width: 800px) {
+    .header {
+        flex-direction: row;
+        justify-content: space-between;
         padding: 20px;
     }
-    .header a {
-        background-color: #f5f5f5;
-        border-radius: 4px;
+
+    .logo {
+        order: 1; /* Move a logo para o lado direito */
+    }
+
+    .menu-burger {
+        display: block;
+        order: 2; /* Mantém o menu à esquerda */
+    }
+
+    .desktop-menu {
+        display: none;
     }
 }
